# rust-queue-system

./: .gitignore  Cargo.toml  README.md
src/: consumer.rs  main.rs  publisher.rs
