[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
lapin = "2.5"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.9"

[[bin]]
name = "publisher"
path = "src/publisher.rs"

[[bin]]
name = "consumer"
path = "src/consumer.rs"
