[package]
name = "rust_publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
lapin = "2.5"
futures-util = "0.3"
log = "0.4"
env_logger = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }  # ✅ Needed for HTTP request to external API
